# bq-meta

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  development.yaml  publish-to-test-pypi.yml  publish.yaml  release-test.yaml  release.yaml  tag.yaml
bq_meta/: __init__.py  __main__.py  auth.py  bq_client.py  cli.py  client.py  config.py  const.py  initialize.py  output.py  types.py  window.py
bq_meta/service/: history_service.py  iam_service.py  meta_service.py  project_service.py  schema_service.py  snippet_service.py  table_service.py  template_service.py  version_service.py
bq_meta/snippets/: dataset_size  duplicate_count  duplicate_rows  month_size  partition_size  table_ddl
bq_meta/util/: bash_util.py  bq_util.py  num_utils.py  rich_utils.py  table_utils.py
docs/: 1-Build.md  1-Run.md  2-Build.md  2-Install.md  3-Install.md  3-Package-test.md  5-Tag.md  Release.md
