[metadata]
name = bq-meta
version = 0.7.0
description = BigQuery metadata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martintupy/bq-meta
author = Martin Tupy
author_email = id@martintupy.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    Click
    google-auth-oauthlib
    google-cloud-bigquery
    jinja2
    pyperclip
    pyyaml
    readchar
    rich
    loguru
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts = bq-meta = bq_meta.cli:cli
