[metadata]
name = bq-meta
version = file:VERSION
description = BigQuery metadata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martintupy/bq-meta
author = Martin Tupy
author_email = id@martintupy.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    Click
    google-cloud-asset
    google-auth-oauthlib
    google-cloud-bigquery
    google-api-python-client
    jinja2
    pyperclip
    pyyaml
    readchar
    rich
    loguru
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts = bq-meta = bq_meta.cli:cli
